Adapt website to schemas changes

--- a/src/app/components/services/services/services.component.css
+++ b/src/app/components/services/services/services.component.css
@@ -26,3 +26,11 @@
   margin-right: 10px;
   margin-left: 10px;
 }
+
+.pre_field{
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+}
