Solved bug, editor creating and destroying eveytime the users clicks

--- a/src/app/components/services/services/services.component.html
+++ b/src/app/components/services/services/services.component.html
@@ -46,8 +46,8 @@
     <div label="Push">
       <h2>Push</h2>
       <mat-accordion class="example-headers-align">
-        <mat-expansion-panel *ngFor="let method of services[path].methods" (click)="services[path].methodSelected.setValue(method)">
-          <mat-expansion-panel-header>
+        <mat-expansion-panel *ngFor="let method of services[path].methods">
+          <mat-expansion-panel-header (click)="services[path].methodSelected.setValue(method)">
             <mat-panel-title>
               {{ method }}
             </mat-panel-title>
