--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -26,3 +26,5 @@
     <mat-progress-spinner [color]="'primary'" [mode]="'indeterminate'"></mat-progress-spinner>
   </mat-card-content>
 </mat-card>
+
+<div id="editor_holder_getcodes"></div>
